[gd_scene load_steps=24 format=3 uid="uid://xpdkbjp6np8x"]

[ext_resource type="Script" path="res://scripts/npc/npc_dialogue_manager.gd" id="2_h3gw3"]
[ext_resource type="Script" path="res://scripts/npc/npc_dialogue_player.gd" id="3_5lq3o"]
[ext_resource type="Script" path="res://scripts/npc/choice_system.gd" id="4_qataf"]
[ext_resource type="Script" path="res://scripts/npc/npc_portraits_manager.gd" id="5_143rr"]
[ext_resource type="Script" path="res://scripts/ui/ui_dialogue.gd" id="6_20o37"]
[ext_resource type="Texture2D" uid="uid://bksttgcoxpwqf" path="res://assets/ui/portraits/knight_1_placeholder.png" id="6_ijibf"]
[ext_resource type="Texture2D" uid="uid://cv4p18tulb4gk" path="res://assets/ui/portraits/goblin_1_placeholder.png" id="7_d0eqs"]

[sub_resource type="SphereShape3D" id="SphereShape3D_v253s"]
radius = 4.33816

[sub_resource type="Animation" id="Animation_78ula"]
resource_name = "GoDown"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-237, 0), Vector2(-237, 350)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_kghpx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-237, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0l3u8"]
resource_name = "RiseUp"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-237, 350), Vector2(-237, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k1yuv"]
_data = {
"GoDown": SubResource("Animation_78ula"),
"RESET": SubResource("Animation_kghpx"),
"RiseUp": SubResource("Animation_0l3u8")
}

[sub_resource type="Animation" id="Animation_y7sg2"]
resource_name = "GoDown"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(243, 0), Vector2(243, 350)]
}

[sub_resource type="Animation" id="Animation_i5aro"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(243, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_sj2n2"]
resource_name = "RiseUp"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(243, 350), Vector2(243, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_beorv"]
_data = {
"GoDown": SubResource("Animation_y7sg2"),
"RESET": SubResource("Animation_i5aro"),
"RiseUp": SubResource("Animation_sj2n2")
}

[sub_resource type="Animation" id="Animation_wmnuf"]
resource_name = "GoDown"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(780, 0), Vector2(780, 350)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_idceu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(780, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_da6dm"]
resource_name = "RiseUp"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(780, 350), Vector2(780, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6gysb"]
_data = {
"GoDown": SubResource("Animation_wmnuf"),
"RESET": SubResource("Animation_idceu"),
"RiseUp": SubResource("Animation_da6dm")
}

[sub_resource type="Animation" id="Animation_bh34j"]
resource_name = "FlashBlack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_cdqia"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vml1o"]
_data = {
"FlashBlack": SubResource("Animation_bh34j"),
"RESET": SubResource("Animation_cdqia")
}

[node name="NPC Test" type="CharacterBody3D"]
process_mode = 3
collision_layer = 2

[node name="DialoguePicker" type="Node3D" parent="."]

[node name="DialogueManager" type="Node3D" parent="."]
script = ExtResource("2_h3gw3")

[node name="InteractArea" type="Area3D" parent="DialogueManager"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="DialogueManager/InteractArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.07974, 0)
shape = SubResource("SphereShape3D_v253s")

[node name="DialoguePlayer" type="Node3D" parent="."]
script = ExtResource("3_5lq3o")

[node name="Timer" type="Timer" parent="DialoguePlayer"]

[node name="ChoiceManager" type="Node3D" parent="."]
script = ExtResource("4_qataf")

[node name="PortraitsManager" type="Node3D" parent="."]
script = ExtResource("5_143rr")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_20o37")

[node name="DimBg" type="ColorRect" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.333333)

[node name="Background" type="TextureRect" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Portraits" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SlotLeft" type="TextureRect" parent="UI/Portraits"]
custom_minimum_size = Vector2(2048, 2048)
layout_mode = 1
offset_left = -237.0
offset_right = 1811.0
offset_bottom = 2048.0
scale = Vector2(0.705, 0.705)
texture = ExtResource("6_ijibf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/Portraits/SlotLeft"]
libraries = {
"": SubResource("AnimationLibrary_k1yuv")
}

[node name="SlotMiddle" type="TextureRect" parent="UI/Portraits"]
custom_minimum_size = Vector2(2048, 2048)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -717.0
offset_right = 1331.0
offset_bottom = 2048.0
grow_horizontal = 2
scale = Vector2(0.705, 0.705)

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/Portraits/SlotMiddle"]
libraries = {
"": SubResource("AnimationLibrary_beorv")
}

[node name="SlotRight" type="TextureRect" parent="UI/Portraits"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1140.0
offset_right = 908.0
offset_bottom = 2048.0
grow_horizontal = 0
scale = Vector2(0.705, 0.705)
texture = ExtResource("7_d0eqs")

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/Portraits/SlotRight"]
libraries = {
"": SubResource("AnimationLibrary_6gysb")
}

[node name="DialoguePanel" type="Panel" parent="UI"]
custom_minimum_size = Vector2(1000, 250)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -300.0
offset_right = 500.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0

[node name="DialogueContainer" type="VBoxContainer" parent="UI"]
custom_minimum_size = Vector2(975, 225)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -487.5
offset_top = -287.0
offset_right = 487.5
offset_bottom = -62.0
grow_horizontal = 2
grow_vertical = 0

[node name="NameLabel" type="RichTextLabel" parent="UI/DialogueContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/default_color = Color(0.968627, 0.901961, 0.803922, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "Name Here"

[node name="DialogueLabel" type="RichTextLabel" parent="UI/DialogueContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/default_color = Color(0.968627, 0.901961, 0.803922, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "Name Here"

[node name="ChoiceContainer" type="VBoxContainer" parent="UI"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="FlashColor" type="ColorRect" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/FlashColor"]
libraries = {
"": SubResource("AnimationLibrary_vml1o")
}

[connection signal="body_entered" from="DialogueManager/InteractArea" to="DialogueManager" method="_on_interact_area_body_entered"]
[connection signal="body_exited" from="DialogueManager/InteractArea" to="DialogueManager" method="_on_interact_area_body_exited"]
